# Dual-Arm-Robot-Force-Controlled-Object-Manipulation

./: Note for German decimal point  README.md  eeff_foam.stl
dual_arm_robot_applications/: CMakeLists.txt  package.xml
dual_arm_robot_applications/include/dual_arm_demonstrator_iml/: DualArmRobot.h  SceneManager.h
dual_arm_robot_applications/include/dual_arm_toolbox/: TrajectoryProcessor.h  Transform.h
dual_arm_robot_applications/include/ur_logging/: Stopwatch.h  UrLogger.h  UrMessageListener.h
dual_arm_robot_applications/launch/: dual_arm_robot_offline_rviz.launch  dual_arm_robot_ros_control_rviz.launch  dual_arm_robot_rviz.launch  dual_arm_robot_tcp_wrench_publisher.launch  ur10_ros_control_rviz.launch  ur5_olddriver_rviz.launch  ur5_ros_control_hi.launch  ur5_ros_control_rviz.launch  ur5_rviz.launch
dual_arm_robot_applications/meshes/shelf/: shelf.stl
dual_arm_robot_applications/src/: dual_arm_robot_vel_force_experiment.cpp  ur10_force_hold_exp.cpp
dual_arm_robot_applications/src/dual_arm_demonstrator_iml/: DualArmRobot.cpp  SceneManager.cpp
dual_arm_robot_applications/src/dual_arm_toolbox/: TrajectoryProcessor.cpp  Transform.cpp
dual_arm_robot_applications/src/executables/: demonstration_setup_helper.cpp  dual_arm_robot_demonstration.cpp  dual_arm_robot_lift_experiment_force.cpp  dual_arm_robot_lift_experiment_force_1.cpp  dual_arm_robot_lift_experiment_force_2.cpp  dual_arm_robot_lift_experiment_planning.cpp  dual_arm_robot_logger.cpp
dual_arm_robot_applications/src/ur_logging/: Stopwatch.cpp  UrLogger.cpp  UrMessageListener.cpp
dual_arm_robot_description/: CMakeLists.txt  package.xml
dual_arm_robot_description/launch/: display_urdf.launch  dual_arm_robot_upload.launch
dual_arm_robot_description/meshes/endeffector/: ee_frame.stl
dual_arm_robot_description/meshes/table/: table.stl  table_back.stl  table_camerahanger.stl  table_front.stl  table_ground.stl  table_platform_ur10.stl  table_platform_ur5.stl  table_side.stl
dual_arm_robot_description/src/: parser.cpp
dual_arm_robot_description/urdf/: dual_arm_robot.urdf.xacro  endeffector.urdf.xacro  ikfast_commands.txt  table.urdf.xacro  ur10.urdf.xacro  ur5.urdf.xacro
dual_arm_robot_driver/: CMakeLists.txt  package.xml
dual_arm_robot_driver/config/: ur10_controllers.yaml  ur5_controllers.yaml
dual_arm_robot_driver/launch/: dual_arm_robot_bringup.launch  dual_arm_robot_bringup_ros_control.launch
dual_arm_robot_moveit_config/: CMakeLists.txt  README  package.xml
dual_arm_robot_moveit_config/config/: controllers.yaml  dual_arm_robot.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
dual_arm_robot_moveit_config/launch/: default_warehouse_db.launch  demo.launch  dual_arm_robot_moveit_controller_manager.launch.xml  dual_arm_robot_moveit_planning_execution.launch  dual_arm_robot_moveit_sensor_manager.launch.xml  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
joint_trajectory_admittance_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  package.xml  ros_control_plugins.xml~  rosdoc.yaml
joint_trajectory_admittance_controller/include/admittance_control/: admittance_control.h
joint_trajectory_admittance_controller/include/joint_trajectory_admittance_controller/: hardware_interface_adapter.h  init_joint_trajectory.h  joint_trajectory_admittance_controller.h  joint_trajectory_admittance_controller_impl.h  joint_trajectory_msg_utils.h  joint_trajectory_segment.h  tolerances.h
joint_trajectory_admittance_controller/include/trajectory_interface_admittance/: pos_vel_acc_state.h  quintic_spline_segment.h  trajectory_interface.h
joint_trajectory_admittance_controller/src/: joint_trajectory_admittance_controller.cpp
joint_trajectory_admittance_controller/test/: init_joint_trajectory_test.cpp  joint_trajectory_controller.test  joint_trajectory_controller_test.cpp  joint_trajectory_msg_utils_test.cpp  joint_trajectory_segment_test.cpp  quintic_spline_segment_test.cpp  rrbot.cpp  rrbot.xacro  rrbot_controllers.yaml  tolerances.test  tolerances.yaml  tolerances_test.cpp  trajectory_interface_test.cpp
my_cart_controller_pkg/: CMakeLists.txt  controller_plugins.xml  package.xml
my_cart_controller_pkg/config/: ur10_controller_setup.yaml
my_cart_controller_pkg/src/: my_controller_file.cpp
my_controller_pkg/: CMakeLists.txt  controller_plugins.xml  package.xml
my_controller_pkg/config/: ur10_controller_setup.yaml
my_controller_pkg/include/my_controller_pkg/: my_controller_file.h
my_controller_pkg/src/: my_controller_file.cpp
