<?xml version="1.0"?>
<package>
  <name>dual_arm_robot_applications</name>
  <version>1.0.0</version>
  <description>
      Applications for the dual arm robot
  </description>

  <author email="daniel.hoeltgen@rub.de">Daniel Hoeltgen</author>
  <maintainer email="daniel.hoeltgen@rub.de">Daniel Hoeltgen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>ur_msgs</run_depend>
  <run_depend>python-lxml</run_depend>
</package>
